# school-codes-v2

./: .deepsource.toml  .gitattributes  LICENSE  README.md  tech.md  tech.yml  techstack.md  techstack.yml
.github/workflows/: codeql.yml
BUT1/: README.md
BUT2/: README.md
BUT3/: README.md
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/: CMakeLists.txt
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/01_CounterMonothread/: CMakeLists.txt  Source_01.cpp  Source_01.py  Source_01.py~
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/02_CounterMultithread/: CMakeLists.txt  Source_02.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/03_CounterMultithread_withMutex/: CMakeLists.txt  Source_03.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/04_CounterMultithread_withAtomic/: CMakeLists.txt  Source_04.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/05_CounterMultithread_withSharedNonMutable/: CMakeLists.txt  Source_05.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/06_CounterMultithread_withTasks/: CMakeLists.txt  Source_06.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/07_CounterMultithread_withScopedLock/: CMakeLists.txt  Source_07.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/08_Static_and_local_thread/: CMakeLists.txt
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/09_AtomicVector_NotOK/: CMakeLists.txt  Source_09.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/10_SyncPattern_Cohort_with_Condition/: CMakeLists.txt  Source_10.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/11_SyncPattern_Latch_with_Condition_N_to_1/: CMakeLists.txt  Source_11.cpp
BUT3/Moodle/S5/Parcours B/Programmation Système/Programmation Concurrente/TP_2/ProgrammationConcurrente/12_SyncPattern_Latch_with_Condition_1_to_N/: CMakeLists.txt  Source_12.cpp
(+3217 files in other folders)
